Начало реализаций следующих пунктов 1. Создание профиля 2. Создания страницы админа 2.1 Информация закозов(имя, телефон, адрес и список пицц) 2.2 Нужно доделать, добавления товара и его удаления из базы

--- a/src/main/resources/com/example/pazzu_pizza/values/style.css
+++ b/src/main/resources/com/example/pazzu_pizza/values/style.css
@@ -51,3 +51,17 @@
 .input-color {
     -fx-background-color: #FFFFFF;
 }
+
+.rect-round{
+    -fx-background-radius: 30;
+}
+
+.secondary-background{
+    -fx-background-color: #FEBF00;
+}
+
+
+.button-flat{
+    -fx-background-radius: 90;
+}
+
