--- a/src/main/resources/com/example/pazzu_pizza/market.fxml
+++ b/src/main/resources/com/example/pazzu_pizza/market.fxml
@@ -66,14 +66,19 @@
                         <Insets left="50.0" right="50.0" top="20.0" />
                      </VBox.margin>
                      <children>
-                        <HBox prefHeight="37.0" prefWidth="335.0">
+                        <HBox prefHeight="44.0" prefWidth="342.0">
                            <children>
                               <Label fx:id="namePizzaLabel" prefHeight="53.0" prefWidth="216.0" text="Барбекю курица">
                                  <font>
                                     <Font name="Cambria" size="24.0" />
                                  </font>
                               </Label>
-                              <Label fx:id="pricePizza" prefHeight="53.0" prefWidth="93.0" text="\$5.99">
+                              <Label fx:id="pricePizza1" prefHeight="44.0" prefWidth="0.0" text="\$">
+                                 <font>
+                                    <Font name="Cambria" size="36.0" />
+                                 </font>
+                              </Label>
+                              <Label fx:id="pricePizza" prefHeight="44.0" prefWidth="85.0" text="5.99">
                                  <font>
                                     <Font name="Cambria" size="36.0" />
                                  </font>
@@ -134,7 +139,7 @@
                               </HBox>
                            </children>
                         </VBox>
-                        <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="270.0" styleClass="search-button" text="Добавить в корзину" textFill="WHITE">
+                        <Button mnemonicParsing="false" onAction="#addBasketAction" prefHeight="50.0" prefWidth="270.0" styleClass="search-button" text="Добавить в корзину" textFill="WHITE">
                            <VBox.margin>
                               <Insets bottom="10.0" top="20.0" />
                            </VBox.margin>
@@ -160,7 +165,7 @@
                      </VBox.margin>
                      <children>
                         <Pane prefHeight="100.0" prefWidth="350.0" HBox.hgrow="ALWAYS" />
-                        <Button alignment="CENTER" mnemonicParsing="false" onAction="#registrationAction" prefHeight="35.0" prefWidth="137.0" stylesheets="@values/style.css" text="Регистрация " textFill="WHITE">
+                        <Button fx:id="registrationButton" alignment="CENTER" mnemonicParsing="false" onAction="#registrationAction" prefHeight="35.0" prefWidth="137.0" stylesheets="@values/style.css" text="Регистрация " textFill="WHITE">
                            <font>
                               <Font name="Cambria" size="18.0" />
                            </font>
@@ -175,7 +180,7 @@
                               <String fx:value="shadow" />
                            </styleClass>
                         </Button>
-                        <Button alignment="CENTER" mnemonicParsing="false" onAction="#inputAction" prefHeight="35.0" prefWidth="94.0" stylesheets="@values/style.css" text="Вход" textFill="WHITE">
+                        <Button fx:id="inputButton" alignment="CENTER" mnemonicParsing="false" onAction="#inputAction" prefHeight="35.0" prefWidth="94.0" stylesheets="@values/style.css" text="Вход" textFill="WHITE">
                            <font>
                               <Font name="Cambria" size="18.0" />
                            </font>
@@ -187,14 +192,18 @@
                               <String fx:value="shadow" />
                            </styleClass>
                         </Button>
-                        <ImageView fitHeight="74.0" fitWidth="85.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@img/корзина.png" />
-                           </image>
+                        <Button mnemonicParsing="false" onAction="#basketActon" prefHeight="66.0" prefWidth="76.0" style="-fx-background-color: #FFFFFF;">
+                           <graphic>
+                              <ImageView fitHeight="58.0" fitWidth="63.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@img/корзина.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
                            <HBox.margin>
-                              <Insets left="30.0" right="10.0" top="5.0" />
+                              <Insets left="20.0" right="15.0" top="15.0" />
                            </HBox.margin>
-                        </ImageView>
+                        </Button>
                      </children>
                   </HBox>
                   <HBox layoutX="30.0" layoutY="15.0" prefHeight="100.0" prefWidth="200.0">
