--- a/src/main/resources/com/example/pazzu_pizza/Item.fxml
+++ b/src/main/resources/com/example/pazzu_pizza/Item.fxml
@@ -10,27 +10,19 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane onMousePressed="#click" prefHeight="215.0" prefWidth="225.0" stylesheets="@values/style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pazzu_pizza.ItemController">
+<AnchorPane onMousePressed="#click" prefHeight="215.0" prefWidth="225.0" stylesheets="@values/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pazzu_pizza.ItemController">
    <children>
       <VBox alignment="CENTER" layoutX="63.0" prefHeight="200.0" prefWidth="100.0" stylesheets="@values/style.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <HBox alignment="CENTER" prefHeight="45.0" prefWidth="225.0">
                <children>
-                  <Label fx:id="nameLabel" prefHeight="43.0" prefWidth="162.0" stylesheets="@values/style.css" text="Пепперони">
+                  <Label fx:id="nameLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="43.0" prefWidth="224.0" stylesheets="@values/style.css" text="Пепперони">
                      <HBox.margin>
                         <Insets left="5.0" />
                      </HBox.margin>
                      <font>
                         <Font name="Cambria" size="24.0" />
                      </font>
-                  </Label>
-                  <Label fx:id="priceLabel" prefHeight="47.0" prefWidth="83.0" text="\$5.00">
-                     <font>
-                        <Font name="Cambria Bold" size="24.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets left="10.0" />
-                     </HBox.margin>
                   </Label>
                </children>
             </HBox>
