--- a/src/main/resources/com/example/pazzu_pizza/listUsersPizza.fxml
+++ b/src/main/resources/com/example/pazzu_pizza/listUsersPizza.fxml
@@ -1,14 +1,72 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import java.lang.String?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.pazzu_pizza.ListUsersPizzaController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="359.0" prefWidth="740.0" stylesheets="@values/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pazzu_pizza.ListUsersPizzaController">
+   <styleClass>
+      <String fx:value="secondary-background" />
+      <String fx:value="shadow" />
+      <String fx:value="input-radius" />
+   </styleClass>
+   <children>
+      <Label layoutX="14.0" layoutY="-4.0" prefHeight="50.0" prefWidth="55.0" styleClass="shadow" text="Имя:">
+         <font>
+            <Font name="Cambria Bold" size="24.0" />
+         </font>
+         <padding>
+            <Insets top="20.0" />
+         </padding>
+      </Label>
+      <Label fx:id="nameLabel" layoutX="75.0" layoutY="-4.0" prefHeight="50.0" prefWidth="198.0" styleClass="shadow" text="name">
+         <font>
+            <Font name="Cambria Bold" size="24.0" />
+         </font>
+         <padding>
+            <Insets top="20.0" />
+         </padding>
+      </Label>
+      <Label layoutX="265.0" layoutY="-4.0" prefHeight="50.0" prefWidth="111.0" styleClass="shadow" text="Телефон:">
+         <font>
+            <Font name="Cambria Bold" size="24.0" />
+         </font>
+         <padding>
+            <Insets top="20.0" />
+         </padding>
+      </Label>
+      <Label fx:id="phoneLabel" layoutX="376.0" layoutY="-4.0" prefHeight="50.0" prefWidth="252.0" styleClass="shadow" text="phone">
+         <font>
+            <Font name="Cambria Bold" size="24.0" />
+         </font>
+         <padding>
+            <Insets top="20.0" />
+         </padding>
+      </Label>
+      <ScrollPane layoutX="7.0" layoutY="49.0" prefHeight="235.0" prefWidth="728.0" styleClass="input-color" stylesheets="@values/style.css">
+         <content>
+            <GridPane fx:id="grid" prefHeight="227.0" prefWidth="731.0" styleClass="input-color">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+            </GridPane>
+         </content>
+      </ScrollPane>
+      <Button alignment="CENTER" layoutX="436.0" layoutY="295.0" mnemonicParsing="false" onAction="#confirmOrderAction" prefHeight="50.0" prefWidth="270.0" text="Подтвердить заказ" textFill="WHITE">
+         <font>
+            <Font name="Cambria Bold" size="20.0" />
+         </font>
+         <styleClass>
+            <String fx:value="search-button" />
+            <String fx:value="shadow" />
+         </styleClass>
+      </Button>
+   </children>
 </AnchorPane>
