--- a/src/main/resources/com/example/pazzu_pizza/market.fxml
+++ b/src/main/resources/com/example/pazzu_pizza/market.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="window" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="810.0" prefWidth="1315.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pazzu_pizza.HelloController">
+<AnchorPane fx:id="window" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="810.0" prefWidth="1315.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pazzu_pizza.HelloController">
    <children>
       <BorderPane layoutX="21.0" layoutY="14.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <left>
@@ -61,24 +61,19 @@
                         <String fx:value="shadow" />
                      </styleClass>
                   </HBox>
-                  <VBox fx:id="chosenPizzaCard" alignment="CENTER" prefHeight="535.0" prefWidth="100.0" VBox.vgrow="ALWAYS">
+                  <VBox fx:id="chosenPizzaCard" alignment="CENTER" prefHeight="609.0" prefWidth="337.0" VBox.vgrow="ALWAYS">
                      <VBox.margin>
-                        <Insets left="50.0" right="50.0" top="20.0" />
+                        <Insets left="30.0" right="30.0" top="20.0" />
                      </VBox.margin>
                      <children>
                         <HBox prefHeight="44.0" prefWidth="342.0">
                            <children>
-                              <Label fx:id="namePizzaLabel" prefHeight="53.0" prefWidth="216.0" text="Барбекю курица">
+                              <Label fx:id="namePizzaLabel" alignment="CENTER" prefHeight="44.0" prefWidth="289.0" text="Барбекю курица">
                                  <font>
-                                    <Font name="Cambria" size="24.0" />
+                                    <Font name="Cambria" size="30.0" />
                                  </font>
                               </Label>
-                              <Label fx:id="pricePizza1" prefHeight="44.0" prefWidth="0.0" text="\$">
-                                 <font>
-                                    <Font name="Cambria" size="36.0" />
-                                 </font>
-                              </Label>
-                              <Label fx:id="pricePizza" prefHeight="44.0" prefWidth="85.0" text="5.99">
+                              <Label fx:id="pricePizza" alignment="CENTER_RIGHT" prefHeight="44.0" prefWidth="101.0" text="5.99">
                                  <font>
                                     <Font name="Cambria" size="36.0" />
                                  </font>
@@ -159,13 +154,14 @@
          <center>
             <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
                <children>
-                  <HBox prefHeight="100.0" prefWidth="200.0">
+                  <HBox prefHeight="100.0" prefWidth="854.0" stylesheets="@values/style.css">
                      <VBox.margin>
-                        <Insets left="20.0" right="20.0" />
+                        <Insets />
                      </VBox.margin>
                      <children>
+                        <Pane prefHeight="100.0" prefWidth="60.0" />
                         <Pane prefHeight="100.0" prefWidth="350.0" HBox.hgrow="ALWAYS" />
-                        <Button fx:id="registrationButton" alignment="CENTER" mnemonicParsing="false" onAction="#registrationAction" prefHeight="35.0" prefWidth="137.0" stylesheets="@values/style.css" text="Регистрация " textFill="WHITE">
+                        <Button fx:id="registrationButton" alignment="CENTER" mnemonicParsing="false" onAction="#registrationAction" prefHeight="35.0" prefWidth="137.0" stylesheets="@values/style.css" text="Регистрация" textFill="WHITE">
                            <font>
                               <Font name="Cambria" size="18.0" />
                            </font>
@@ -204,9 +200,10 @@
                               <Insets left="20.0" right="15.0" top="15.0" />
                            </HBox.margin>
                         </Button>
+                        <Pane prefHeight="100.0" prefWidth="21.0" />
                      </children>
                   </HBox>
-                  <HBox layoutX="30.0" layoutY="15.0" prefHeight="100.0" prefWidth="200.0">
+                  <HBox layoutX="30.0" layoutY="15.0" prefHeight="100.0" prefWidth="200.0" stylesheets="@values/style.css">
                      <children>
                         <Pane prefHeight="100.0" prefWidth="56.0" />
                         <HBox prefHeight="115.0" prefWidth="376.0" stylesheets="@values/style.css">
@@ -284,7 +281,7 @@
                         <Pane prefHeight="100.0" prefWidth="43.0" />
                      </children>
                      <VBox.margin>
-                        <Insets left="20.0" right="20.0" top="10.0" />
+                        <Insets />
                      </VBox.margin>
                   </HBox>
                   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
