Добавил профиль, админа, подключил к базе данных

--- a/src/main/resources/com/example/pazzu_pizza/admin.fxml
+++ b/src/main/resources/com/example/pazzu_pizza/admin.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="810.0" prefWidth="1315.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pazzu_pizza.AdminController">
+<BorderPane fx:id="window" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="810.0" prefWidth="1315.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pazzu_pizza.AdminController">
    <left>
       <Pane prefHeight="810.0" prefWidth="479.0" styleClass="right-bar" stylesheets="@values/style.css" BorderPane.alignment="CENTER">
          <children>
