--- a/src/main/resources/com/example/pazzu_pizza/basket.fxml
+++ b/src/main/resources/com/example/pazzu_pizza/basket.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="810.0" prefWidth="1315.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pazzu_pizza.BasketController">
+<BorderPane fx:id="window" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="810.0" prefWidth="1315.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pazzu_pizza.BasketController">
    <left>
       <VBox prefHeight="810.0" prefWidth="838.0" spacing="20.0" styleClass="right-bar" stylesheets="@values/style.css" BorderPane.alignment="CENTER">
          <padding>
@@ -42,7 +42,7 @@
                      </font>
                   </Label>
                   <Pane prefHeight="71.0" prefWidth="155.0" />
-                  <Button alignment="CENTER" mnemonicParsing="false" onAction="#inputAction" prefHeight="35.0" prefWidth="120.0" stylesheets="@values/style.css" text="Вход" textFill="WHITE">
+                  <Button fx:id="inputButton" alignment="CENTER" mnemonicParsing="false" onAction="#inputAction" prefHeight="35.0" prefWidth="120.0" stylesheets="@values/style.css" text="Вход" textFill="WHITE">
                      <font>
                         <Font name="Cambria" size="18.0" />
                      </font>
@@ -68,14 +68,9 @@
             </ScrollPane>
             <HBox alignment="BOTTOM_RIGHT" prefHeight="37.0" prefWidth="740.0">
                <children>
-                  <Label prefHeight="35.0" prefWidth="178.0" styleClass="shadow" text="Итоговая цена">
+                  <Label prefHeight="35.0" prefWidth="178.0" styleClass="shadow" text="Итоговая цена:">
                      <font>
                         <Font name="Cambria" size="24.0" />
-                     </font>
-                  </Label>
-                  <Label alignment="CENTER" prefHeight="35.0" prefWidth="21.0" styleClass="shadow" text="\$">
-                     <font>
-                        <Font size="24.0" />
                      </font>
                   </Label>
                   <Label fx:id="priceText" alignment="TOP_LEFT" prefHeight="35.0" prefWidth="88.0" styleClass="shadow" text="0">
