--- a/src/main/resources/com/example/pazzu_pizza/basket.fxml
+++ b/src/main/resources/com/example/pazzu_pizza/basket.fxml
@@ -35,13 +35,13 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Pane prefHeight="71.0" prefWidth="172.0" />
-                  <Label prefHeight="49.0" prefWidth="275.0" styleClass="shadow" text="Мои покупки">
+                  <Pane prefHeight="71.0" prefWidth="124.0" />
+                  <Label prefHeight="49.0" prefWidth="279.0" styleClass="shadow" text="Мои покупки">
                      <font>
                         <Font name="Cambria Bold" size="40.0" />
                      </font>
                   </Label>
-                  <Pane prefHeight="71.0" prefWidth="155.0" />
+                  <Pane prefHeight="65.0" prefWidth="155.0" />
                   <Button fx:id="inputButton" alignment="CENTER" mnemonicParsing="false" onAction="#inputAction" prefHeight="35.0" prefWidth="120.0" stylesheets="@values/style.css" text="Вход" textFill="WHITE">
                      <font>
                         <Font name="Cambria" size="18.0" />
@@ -68,6 +68,16 @@
             </ScrollPane>
             <HBox alignment="BOTTOM_RIGHT" prefHeight="37.0" prefWidth="740.0">
                <children>
+                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#updateAction" prefHeight="42.0" prefWidth="52.0" style="-fx-background-color: #FFDF8C;">
+                     <graphic>
+                        <ImageView fitHeight="34.0" fitWidth="38.0">
+                           <image>
+                              <Image url="@img/updating.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+                  <Pane prefHeight="42.0" prefWidth="451.0" />
                   <Label prefHeight="35.0" prefWidth="178.0" styleClass="shadow" text="Итоговая цена:">
                      <font>
                         <Font name="Cambria" size="24.0" />
